--- a/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
@@ -53,15 +53,15 @@
                             Dashboard
                         </a>
                         <div class="sb-sidenav-menu-heading">SAYFA İŞLEMLERİ</div>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Kategori/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-list-ul"></i></div>
                             Kategoriler
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Urun/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Ürünler
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Departman/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-arrows-alt"></i></div>
                             Departmanlar
                         </a>
@@ -92,7 +92,7 @@
                         </a>
                         <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                           İstatistikler
+                            İstatistikler
                         </a>
                         <div class="sb-sidenav-menu-heading">ADMİN İŞLEMLERİ</div>
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
