--- a/MvcOnlineTicariOtomasyon/Views/Departman/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Departman/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MvcOnlineTicariOtomasyon.Models.Siniflar
-@model List<Kategori>
+@model List<Departman>
 
 @{
     ViewBag.Title = "Index";
@@ -9,13 +9,13 @@
 <div class="row">
     <div class="col-xl-12">
         <div class="card mb-3">
-            <div class="card-header"><i class="fas fa-list-ul"></i> Kategoriler</div>
+            <div class="card-header"><i class="fas fa-arrows-alt"></i> Departmanlar</div>
             <div class="card-body">
                 <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Kategori Adı</th>
+                            <th>Departman Adı</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -23,16 +23,17 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td>@item.KategoriID</td>
-                                <td>@item.KategoriAd</td>
+                                <td>@item.DepartmanID</td>
+                                <td>@item.DepartmanAd</td>
                                 <td class="text-right">
                                     <div class="dropdown">
                                         <a class="btn btn-sm btn-icon-only text-dark" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <i class="fa fa-ellipsis-v"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                            <a class="dropdown-item" href="/Kategori/KategoriGuncelle/@item.KategoriID"><i class="fa fa-pen mx-0"></i> Güncelle</a>
-                                            <a class="dropdown-item" href="/Kategori/KategoriSil/@item.KategoriID"><i class="fa fa-trash mx-0"></i> Sil</a>
+                                            <a class="dropdown-item" href="/Departman/DepartmanDetay/@item.DepartmanID"><i class="fa fa-th-list mx-0"></i> Detay</a>
+                                            <a class="dropdown-item" href="/Departman/DepartmanGuncelle/@item.DepartmanID"><i class="fa fa-pen mx-0"></i> Güncelle</a>
+                                            <a class="dropdown-item" href="/Departman/DepartmanSil/@item.DepartmanID"><i class="fa fa-trash mx-0"></i> Sil</a>
                                         </div>
                                     </div>
                                 </td>
@@ -40,7 +41,7 @@
                         }
                     </tbody>
                 </table>
-                <a href="/Kategori/KategoriEkle" class="btn btn-outline-primary col-12">Yeni Kategori Oluştur!</a>
+                <a href="/Departman/DepartmanEkle" class="btn btn-outline-primary col-12">Yeni Departman Oluştur!</a>
             </div>
         </div>
     </div>
