--- a/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
@@ -79,7 +79,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-folder-open"></i></div>
                             Satışlar
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Fatura/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-print"></i></div>
                             Faturalar
                         </a>
@@ -91,7 +91,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-minus"></i></div>
                             Giderler
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Istatistik/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             İstatistikler
                         </a>
