--- a/MvcOnlineTicariOtomasyon/Views/Personel/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Personel/Index.cshtml
@@ -26,7 +26,7 @@
                         {
                             <tr>
                                 <td>@item.PersonelID</td>
-                                <td>@item.PersonelGorsel</td>
+                                <td><img style="width:5rem;" src="@item.PersonelGorsel"  /></td>
                                 <td>@item.PersonelAd @item.PersonelSoyad</td>
                                 <td>@item.Departman.DepartmanAd</td>
                                 <td class="text-right">
