--- a/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Shared/_AdminLayout.cshtml
@@ -70,6 +70,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Personeller
                         </a>
+                        <a class="nav-link" href="/Personel/PersonelListesi">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                            Personel Kartları
+                        </a>
                         <a class="nav-link" href="/Cari/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-id-card"></i></div>
                             Cariler
@@ -107,6 +111,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tag"></i></div>
                             Ürün Detay
                         </a>
+                        <a class="nav-link" href="/Istatistik/HizliTablolar">
+                            <div class="sb-nav-link-icon"><i class="fas fa-calendar"></i></div>
+                            Hızlı Tablolar
+                        </a>
                         <div class="sb-sidenav-menu-heading">ADMİN İŞLEMLERİ</div>
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-user-plus"></i></div>
@@ -121,9 +129,9 @@
                                 <a class="nav-link" href="layout-sidenav-light.html">Şifremi Unuttum!</a>
                             </nav>
                         </div>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Yapilacak/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                            Charts
+                            Yapılacaklar
                         </a>
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
