--- a/MvcOnlineTicariOtomasyon/Views/Login/Index.cshtml
+++ b/MvcOnlineTicariOtomasyon/Views/Login/Index.cshtml
@@ -62,6 +62,7 @@
             <div class="clear"> </div>
         </div>
     </section>
+
     <div class="pop-up">
         <div id="small-dialog" class="mfp-hide book-form">
             <div class="login-form login-form-left">
@@ -70,11 +71,13 @@
                     <span class="fa fa-lock"></span>
                     <div class="clear"></div>
                     <div class="login-agileits-top">
-                        <form action="#" method="post">
+                        @using (Html.BeginForm("CariLogin", "Login", FormMethod.Post))
+                        {
                             <input type="text" class="name" name="CariMail" Placeholder="E-Posta adresinizi giriniz." required="" />
-                            <input type="password" class="password" name="Sifre" Placeholder="Şifrenizi giriniz." required="" />
+                            <input type="password" class="password" name="CariSifre" Placeholder="Şifrenizi giriniz." required="" />
                             <input type="submit" value="Giriş Yap!">
-                        </form>
+                        }
+
                     </div>
                     <div class="login-agileits-bottom">
                         <h6><a href="#">Şifrenizimi unuttunuz?</a></h6>
@@ -92,11 +95,12 @@
                     <span class="fa fa-lock"></span>
                     <div class="clear"></div>
                     <div class="login-agileits-top">
-                        <form action="#" method="post">
-                            <input type="text" class="name" name="KullaniciAd" Placeholder="Kullanıcı adınızı giriniz." required="" />
-                            <input type="password" class="password" name="Sifre" Placeholder="Şifrenizi giriniz." required="" />
-                            <input type="submit" value="Giriş Yap!">
-                        </form>
+                        @using (Html.BeginForm("AdminLogin", "Login", FormMethod.Post))
+                        {
+                            <input type="text" class="name" name="KullaniciAd" Placeholder="Kullanıcı Adı" required="" />
+                            <input type="password" class="password" name="Sifre" Placeholder="Şifre" required="" />
+                            <input type="submit" value="Giriş Yap">
+                        }
                     </div>
                     <div class="login-agileits-bottom">
                         <h6><a href="#">Şifrenizimi unuttunuz?</a></h6>
@@ -128,4 +132,3 @@
     </script>
 </body>
 </html>
-
